# expo-live2d-cubism

./: .gitignore  .npmignore  README-zh.md  README.md  expo-module.config.json  index.ts  package.json
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/assets/live2d_models/kei_vowels_pro/: kei_vowels_pro.model3.json
android/src/main/assets/live2d_models/kei_vowels_pro/expressions/: angry.exp3.json  happy.exp3.json  sad.exp3.json  surprised.exp3.json
android/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  PlatformAndroid.cpp  PlatformAndroid.hpp
android/src/main/java/expo/modules/live2d/: AudioAnalyzer.kt  ExpoLive2DModule.kt  ExpoLive2DView.kt  Live2DRenderer.kt  NativeBridge.kt
cpp/shared/: L2DModel.cpp  L2DModel.hpp  L2DSDKInit.cpp  L2DSDKInit.hpp  Platform.hpp
ios/: ExpoLive2D.h  ExpoLive2D.podspec  ExpoLive2DModule.swift  ExpoLive2DView.swift  L2DAudioEngine.h  L2DAudioEngine.mm  L2DSDKManager.h  L2DSDKManager.mm  Live2DObjCAdapter.h  Live2DObjCAdapter.mm  PlatformIOS.hpp  PlatformIOS.mm
plugin/: tsconfig.json
plugin/src/: index.ts
src/: ExpoLive2D.types.ts  ExpoLive2DModule.ts  ExpoLive2DView.tsx
